<?xml version="1.0"?>
<package format="3">
  <name>mam_control</name>
  <version>1.0.0</version>
  <description>Mecanum-wheel kinematics node and ros2_control configuration</description>
  <maintainer email="ali.yazbeck1412@gmail.com">Ali Yazbeck</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>controller_manager</depend>
  <depend>ros2_controllers</depend>
  <depend>ign_ros2_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
