<?xml version="1.0"?>
<package format="3">
  <name>mam_description</name>
  <version>1.0.0</version>
  <description>MAM robot URDF — mecanum base, Velodyne VLP-16, RGBD camera, IMU</description>
  <maintainer email="ali.yazbeck1412@gmail.com">Ali Yazbeck</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
