<?xml version="1.0"?>
<package format="3">
  <name>mam_navigation</name>
  <version>1.0.0</version>
  <description>Nav2 configuration tuned for the holonomic mecanum robot</description>
  <maintainer email="ali.yazbeck1412@gmail.com">Ali Yazbeck</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_lifecycle_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
